--- a/src/boatprototype/Membership_Report.form
+++ b/src/boatprototype/Membership_Report.form
@@ -36,8 +36,8 @@
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <Component id="jScrollPane1" min="-2" pref="275" max="-2" attributes="0"/>
-              <EmptySpace pref="33" max="32767" attributes="0"/>
+              <Component id="jScrollPane1" pref="509" max="32767" attributes="0"/>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="backBtn" alignment="3" min="-2" pref="39" max="-2" attributes="0"/>
                   <Component id="homeBtn" alignment="3" min="-2" pref="39" max="-2" attributes="0"/>
@@ -58,7 +58,7 @@
         <Component class="javax.swing.JTable" name="memberTbl">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="12" rowCount="15">
+              <Table columnCount="12" rowCount="30">
                 <Column editable="false" title="Membership ID" type="java.lang.Object"/>
                 <Column editable="false" title="Name" type="java.lang.String"/>
                 <Column editable="false" title="DOB" type="java.lang.String"/>
