--- a/src/boatprototype/Admin.form
+++ b/src/boatprototype/Admin.form
@@ -49,7 +49,7 @@
                   <Group type="102" alignment="1" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="eventManagementBtn" min="-2" max="-2" attributes="0"/>
-                          <Component id="jButton6" min="-2" max="-2" attributes="0"/>
+                          <Component id="BoatAdminBtn" min="-2" max="-2" attributes="0"/>
                           <Component id="boatDetailsReportBtn" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="57" max="-2" attributes="0"/>
@@ -73,7 +73,7 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
-                      <Component id="jButton6" min="-2" max="-2" attributes="0"/>
+                      <Component id="BoatAdminBtn" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="boatDetailsReportBtn" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
@@ -137,10 +137,13 @@
         <Property name="text" type="java.lang.String" value="Event Management"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="jButton6">
+    <Component class="javax.swing.JButton" name="BoatAdminBtn">
       <Properties>
         <Property name="text" type="java.lang.String" value="Boat Space Admin"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BoatAdminBtnActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="boatDetailsReportBtn">
       <Properties>
