--- a/src/boatprototype/DutySignIn.form
+++ b/src/boatprototype/DutySignIn.form
@@ -156,8 +156,8 @@
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="3" rowCount="6">
-                <Column editable="false" title="Duty Name" type="java.lang.String"/>
-                <Column editable="true" title="Member Name" type="java.lang.String"/>
+                <Column editable="false" title="Member Name" type="java.lang.String"/>
+                <Column editable="true" title="Duty Name" type="java.lang.String"/>
                 <Column editable="true" title="Member ID" type="java.lang.Object"/>
               </Table>
             </Property>
